# ray_tracer_rs

./: .gitignore  Cargo.toml  README.md
src/: camera.rs  canvas.rs  cubes.rs  cylinders.rs  groups.rs  index.html  intersections.rs  lights.rs  main.rs  margin.rs  materials.rs  matrices.rs  objects.rs  patterns.rs  planes.rs  play.rs  rays.rs  scenarios.rs  shapes.rs  spheres.rs  transformations.rs  triangles.rs  tuples.rs  world.rs
src/core/: matrices.rs  mod.rs  transformations.rs  tuples.rs
src/materials/: mod.rs
src/scenarios/: hexagon.rs  mod.rs  three_spheres.rs  transparent_cube.rs  world.rs
src/shapes/: cubes.rs  cylinders.rs  groups.rs  mod.rs  objects.rs  planes.rs  spheres.rs  triangles.rs
